commit for add file in stowzy

--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/login/login.component.css
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/login/login.component.css
@@ -2,7 +2,7 @@
   background-image: url("/assets/images/login-user/login-user-1.jpg");
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
