--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-three/step-three.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-three/step-three.component.html
@@ -1,25 +1,52 @@
-<div class="container">
-  <form [formGroup]="stepThreeForm"
-        (ngSubmit)="stepThreeSubmit()"
-        autocomplete="off"
-        novalidate
-        #formRef="ngForm">
-
-    <div class="input">
-      <label for="cardNumber">Card Number <span>*</span></label>
-      <input type="text" id="cardNumber" placeholder="Enter Card Number" formControlName="cardNumber"/>
-      <span class="error" *ngIf="stepThreeForm.controls['cardNumber'].hasError('required') && formRef.submitted">Card Number is a required field
-      </span>
+<div class="container p-0">
+  <div class="card">
+    <div class="card-header bg-dark text-white text-center p-4">
+      <h2 class="mb-0">Upload Documents</h2>
     </div>
+    <div class="card-body p-3 bg-light">
+      <form [formGroup]="stepThreeForm" (ngSubmit)="stepThreeSubmit()" autocomplete="off" novalidate #formRef="ngForm" class="Upload-Documents">
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="proofOfIdentity" class="form-label ps-1">Identity Proof<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="proofOfIdentity">
+              <option value="">Select identity proof</option>
+              <option *ngFor="let proofOfIdentity of proofOfIdentityOptions" [value]="proofOfIdentity.value">
+                {{ proofOfIdentity.label }}
+              </option>
+            </select>
+            <span class="error" *ngIf="stepThreeForm.controls['proofOfIdentity'].hasError('required') && formRef.submitted">
+              Please select identity proof
+            </span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="DocumentIdProof" class="form-label ps-1">Upload Identity Proof<span class="asterisk">*</span></label>
+            <app-file-upload (uploadedFiles)="uploadDocumentProof($event)" [selectionMode]="'single'" [isPreview] = 'false'></app-file-upload>
+            <span class="error" *ngIf="stepThreeForm.controls['DocumentIdProof'].hasError('required') && formRef.submitted">
+              Please upload document
+            </span>
+          </div>
+        </div>
 
-    <div class="buttons">
-      <div class="button">
-        <button class="button previous" cdkStepperPrevious>Previous</button>
-      </div>
-      <div class="button">
-        <button class="button" cdkStepperNext>Next</button>
-      </div>
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="stowzyImages" class="form-label ps-1">Upload Stowzy Images<span class="asterisk">*</span></label>
+            <app-file-upload (uploadedFiles)="handleStowzyImages($event)" [selectionMode]="'multiple'"></app-file-upload>
+            <span class="error" *ngIf="stepThreeForm.controls['stowzyImages'].hasError('required') && formRef.submitted">
+              Please stowzy images
+            </span>
+          </div>
+        </div>
+
+        <div class="buttons mt-3">
+          <div class="button float-start">
+            <button class="button btn-types previous" cdkStepperPrevious>Previous</button>
+          </div>
+          <div class="button float-end">
+            <button class="button btn-types" cdkStepperNext>Next</button>
+          </div>
+        </div>
+
+      </form>
     </div>
-
-  </form>
+  </div>
 </div>
