coomit for changes

--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/room-owner-signup/room-owner-signup.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/room-owner-signup/room-owner-signup.component.html
@@ -24,7 +24,7 @@
     <img src="./assets/images/rm-owner-login/rm-login-pic-1.jpg" class="img-fluid" alt="Main Image" />
   </div>
 </section>
-<section class="stepper-form">
+<section class="stepper-form mb-5">
   <div class="main">
     <div class="header text-center my-2">
       <h1>Room Owner Registration</h1>
