--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
@@ -96,7 +96,7 @@
           </div>
         </div>
        
-        <div class="button float-end">
+        <div class="float-end mt-4">
           <button class="button" cdkStepperNext>Next</button>
         </div>
 
