--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-two/step-two.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-two/step-two.component.html
@@ -163,7 +163,7 @@
 
         </div>
 
-        <div class="buttons mt-3">
+        <div class="mt-4 mb-4">
           <div class="button float-start">
             <button class="button btn-types previous" cdkStepperPrevious>Previous</button>
           </div>
