--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-three/step-three.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-three/step-three.component.html
@@ -37,7 +37,7 @@
           </div>
         </div>
 
-        <div class="buttons mt-3">
+        <div class="mt-4">
           <div class="button float-start">
             <button class="button btn-types previous" cdkStepperPrevious>Previous</button>
           </div>
