commit for changes

--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/login/action/room-owner-login/room-owner-login.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/login/action/room-owner-login/room-owner-login.component.html
@@ -3,11 +3,7 @@
     <nav class="navbar navbar-expand nav-color fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="./assets/images/logos/main-logo.png"
-            class="rounded-circle"
-            alt=""
-          />
+          <img src="./assets/images/logos/main-logo.png" class="rounded-circle" alt="" />
         </a>
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
@@ -16,13 +12,7 @@
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a
-              class="nav-link active"
-              href="#"
-              data-bs-toggle="modal"
-              data-bs-target="#loginModal"
-              >Login</a
-            >
+            <a class="nav-link active" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
           </li>
         </ul>
       </div>
@@ -32,20 +22,12 @@
 
 <section class="owner-welcome-section">
   <div class="mt-5">
-    <img
-      src="./assets/images/rm-owner-login/rm-login-pic-1.jpg"
-      class="img-fluid"
-      alt="Room Owner Welcome"
-    />
+    <img src="./assets/images/rm-owner-login/rm-login-pic-1.jpg" class="img-fluid" alt="Room Owner Welcome" />
   </div>
   <div class="container">
     <div class="row main-content bg-light">
       <div class="left-cell col-md-6 d-none d-md-block">
-        <img
-          src="./assets/images/rm-owner-login/rm-login-pic-2.jpg"
-          class="img-fluid responsive-img"
-          alt="Room Owner Image"
-        />
+        <img src="./assets/images/rm-owner-login/rm-login-pic-2.jpg" class="img-fluid responsive-img" alt="Room Owner Image" />
       </div>
       <div class="right-cell col-12 col-md-6">
         <div class="text-container p-4">
@@ -65,11 +47,7 @@
         </div>
       </div>
       <div class="left-cell col-12 col-md-6 d-block d-md-none">
-        <img
-          src="./assets/images/rm-owner-login/rm-login-pic-2.jpg"
-          class="img-fluid responsive-img"
-          alt="Room Owner Image"
-        />
+        <img src="./assets/images/rm-owner-login/rm-login-pic-2.jpg" class="img-fluid responsive-img" alt="Room Owner Image" />
       </div>
     </div>
   </div>
@@ -89,11 +67,7 @@
         </div>
       </div>
       <div class="col-12 col-md-6 text-center">
-        <img
-          src="./assets/images/rm-owner-login/rm-login-pic-3.jpg"
-          class="img-fluid responsive-img"
-          alt="Storage Options"
-        />
+        <img src="./assets/images/rm-owner-login/rm-login-pic-3.jpg" class="img-fluid responsive-img" alt="Storage Options" />
       </div>
     </div>
   </div>
@@ -108,55 +82,37 @@
       <div class="marquee-content">
         <div class="marquee-item">
           <div class="image-container">
-            <img
-              src="https://images.pexels.com/photos/19867647/pexels-photo-19867647.jpeg"
-              alt="Jaipur"
-            />
+            <img src="https://images.pexels.com/photos/19867647/pexels-photo-19867647.jpeg" alt="Jaipur" />
             <div class="city-name">Jaipur</div>
           </div>
         </div>
         <div class="marquee-item">
           <div class="image-container">
-            <img
-              src="https://images.pexels.com/photos/18205633/pexels-photo-18205633.jpeg"
-              alt="Mumbai"
-            />
+            <img src="https://images.pexels.com/photos/18205633/pexels-photo-18205633.jpeg" alt="Mumbai" />
             <div class="city-name">Mumbai</div>
           </div>
         </div>
         <div class="marquee-item">
           <div class="image-container">
-            <img
-              src="https://images.pexels.com/photos/789750/pexels-photo-789750.jpeg"
-              alt="Delhi"
-            />
+            <img src="https://images.pexels.com/photos/789750/pexels-photo-789750.jpeg" alt="Delhi" />
             <div class="city-name">Delhi</div>
           </div>
         </div>
         <div class="marquee-item">
           <div class="image-container">
-            <img
-              src="https://images.pexels.com/photos/6667282/pexels-photo-6667282.jpeg"
-              alt="Chennai"
-            />
+            <img src="https://images.pexels.com/photos/6667282/pexels-photo-6667282.jpeg" alt="Chennai" />
             <div class="city-name">Chennai</div>
           </div>
         </div>
         <div class="marquee-item">
           <div class="image-container">
-            <img
-              src="https://images.pexels.com/photos/12436005/pexels-photo-12436005.jpeg"
-              alt="Hyderabad"
-            />
+            <img src="https://images.pexels.com/photos/12436005/pexels-photo-12436005.jpeg" alt="Hyderabad" />
             <div class="city-name">Hyderabad</div>
           </div>
         </div>
         <div class="marquee-item">
           <div class="image-container">
-            <img
-              src="https://images.pexels.com/photos/3520942/pexels-photo-3520942.jpeg"
-              alt="Kolkata"
-            />
+            <img src="https://images.pexels.com/photos/3520942/pexels-photo-3520942.jpeg" alt="Kolkata" />
             <div class="city-name">Kolkata</div>
           </div>
         </div>
@@ -269,15 +225,9 @@
       <!-- Social Media Links -->
       <div class="col-lg-2 col-md-6 mb-3 text-center text-md-left">
         <h5 class="text-uppercase mb-3">Follow Us</h5>
-        <a href="#" class="text-light mr-3"
-          ><i class="fab fa-facebook fa-lg"></i
-        ></a>
-        <a href="#" class="text-light mr-3"
-          ><i class="fab fa-twitter fa-lg"></i
-        ></a>
-        <a href="#" class="text-light mr-3"
-          ><i class="fab fa-instagram fa-lg"></i
-        ></a>
+        <a href="#" class="text-light mr-3"><i class="fab fa-facebook fa-lg"></i></a>
+        <a href="#" class="text-light mr-3"><i class="fab fa-twitter fa-lg"></i></a>
+        <a href="#" class="text-light mr-3"><i class="fab fa-instagram fa-lg"></i></a>
         <a href="#" class="text-light"><i class="fab fa-linkedin fa-lg"></i></a>
       </div>
     </div>
@@ -294,66 +244,32 @@
 </section>
 
 <section class="login-model">
-  <div
-    class="modal fade"
-    id="loginModal"
-    tabindex="-1"
-    aria-labelledby="loginModalLabel"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header text-white">
           <h5 class="modal-title" id="loginModalLabel">Login to Stowzy</h5>
-          <button
-            type="button"
-            id="model-btn-close"
-            class="btn-close d-none d-md-block"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+          <button type="button" id="model-btn-close" class="btn-close d-none d-md-block" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
         <!-- Modal Body -->
         <div class="modal-body">
           <form>
             <div class="form-group mb-3">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Enter your mobile No"
-                required
-              />
+              <input type="text" class="form-control" placeholder="Enter your mobile No" required />
             </div>
 
             <div class="form-group mb-3">
-              <input
-                type="password"
-                class="form-control"
-                placeholder="Password"
-                required
-              />
+              <input type="password" class="form-control" placeholder="Password" required />
             </div>
 
             <div class="form-group d-flex justify-content-between mb-3">
               <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="rememberMeCheck"
-                />
-                <label class="form-check-label" for="rememberMeCheck"
-                  >Remember Me</label
-                >
+                <input class="form-check-input" type="checkbox" id="rememberMeCheck" />
+                <label class="form-check-label" for="rememberMeCheck">Remember Me</label>
               </div>
               <div>
-                <a
-                  class="text-primary"
-                  href="#"
-                  data-bs-toggle="modal"
-                  data-bs-target="#forgotPasswordModal"
-                  >Forgot Password</a
-                >
+                <a class="text-primary" href="#" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">Forgot Password</a>
               </div>
             </div>
 
@@ -369,12 +285,7 @@
         </div>
 
         <div class="text-center mb-3">
-          <button
-            type="button"
-            id="model-btn-close1"
-            class="btn btn-secondary d-md-none"
-            data-bs-dismiss="modal"
-          >
+          <button type="button" id="model-btn-close1" class="btn btn-secondary d-md-none" data-bs-dismiss="modal">
             Close
           </button>
         </div>
@@ -384,26 +295,14 @@
 </section>
 
 <section class="forgot-password-model">
-  <div
-    class="modal fade"
-    id="forgotPasswordModal"
-    tabindex="-1"
-    aria-labelledby="forgotPasswordModalLabel"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header text-white">
           <h5 class="modal-title" id="forgotPasswordModalLabel">
             Forgot Password
           </h5>
-          <button
-            type="button"
-            id="model-btn-close"
-            class="btn-close d-none d-md-block"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+          <button type="button" id="model-btn-close" class="btn-close d-none d-md-block" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <!-- Modal Body -->
         <div class="modal-body">
@@ -411,86 +310,40 @@
             <!-- Email Input -->
             <div class="form-group">
               <label for="emailAddress" class="form-label">Email Address</label>
-              <input
-                type="email"
-                id="emailAddress"
-                class="form-control"
-                placeholder="Enter your email address"
-                required
-              />
+              <input type="email" id="emailAddress" class="form-control" placeholder="Enter your email address" required />
             </div>
             <!-- OTP Button and Input (Email) -->
             <div class="mt-2">
               <div class="d-flex">
-                <button
-                  type="button"
-                  class="btn btn-outline-primary w-50"
-                  id="emailOtpBtn"
-                >
+                <button type="button" class="btn btn-outline-primary w-50" id="emailOtpBtn">
                   Get email OTP
                 </button>
-                <input
-                  type="text"
-                  id="emailOtp"
-                  maxlength="4"
-                  minlength="4"
-                  class="form-control w-50 ms-1"
-                  placeholder="Enter email OTP"
-                />
+                <input type="text" id="emailOtp" maxlength="4" minlength="4" class="form-control w-50 ms-1" placeholder="Enter email OTP" />
               </div>
             </div>
             <!-- Mobile Number Input -->
             <div class="form-group mt-3">
               <label for="mobileNumber" class="form-label">Mobile Number</label>
-              <input
-                type="text"
-                id="mobileNumber"
-                class="form-control"
-                placeholder="Enter your mobile number"
-                required
-              />
+              <input type="text" id="mobileNumber" class="form-control" placeholder="Enter your mobile number" required />
             </div>
             <!-- Mobile OTP Button and Input -->
             <div class="mt-2">
               <div class="d-flex">
-                <button
-                  type="button"
-                  class="btn btn-outline-primary w-50"
-                  id="mobileOtpBtn"
-                >
+                <button type="button" class="btn btn-outline-primary w-50" id="mobileOtpBtn">
                   Get Mobile OTP
                 </button>
-                <input
-                  type="text"
-                  id="mobileOtp"
-                  class="form-control w-50 ms-1"
-                  placeholder="Enter mobile OTP"
-                />
+                <input type="text" id="mobileOtp" class="form-control w-50 ms-1" placeholder="Enter mobile OTP" />
               </div>
             </div>
             <!-- Password Input -->
             <div class="form-group mt-2">
               <label for="password" class="form-label">Password</label>
-              <input
-                type="password"
-                id="password"
-                class="form-control"
-                placeholder="Enter your password"
-                required
-              />
+              <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
             </div>
             <!-- Confirm Password Input -->
             <div class="form-group mt-2">
-              <label for="cnfmPassword" class="form-label"
-                >Confirm Password</label
-              >
-              <input
-                type="password"
-                id="cnfmPassword"
-                class="form-control"
-                placeholder="Confirm your password"
-                required
-              />
+              <label for="cnfmPassword" class="form-label">Confirm Password</label>
+              <input type="password" id="cnfmPassword" class="form-control" placeholder="Confirm your password" required />
             </div>
             <!-- Submit Button -->
             <button type="submit" class="btn btn-outline-primary w-100 mt-2">
@@ -500,12 +353,7 @@
         </div>
         <!-- Close Button for Small Screens -->
         <div class="text-center mb-3">
-          <button
-            type="button"
-            id="model-btn-close1"
-            class="btn btn-secondary d-md-none"
-            data-bs-dismiss="modal"
-          >
+          <button type="button" id="model-btn-close1" class="btn btn-secondary d-md-none" data-bs-dismiss="modal">
             Close
           </button>
         </div>
