--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/login/login.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/login/login.component.html
@@ -21,41 +21,21 @@
           <form class="userLoginForm">
             <h3>Login to Your Account</h3>
             <div class="form-group">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Enter your mobile No"
-                required
-              />
+              <input type="text" class="form-control" placeholder="Enter your mobile No" required />
             </div>
             <div class="form-group">
-              <input
-                type="password"
-                class="form-control"
-                placeholder="Password"
-                required
-              />
+              <input type="password" class="form-control" placeholder="Password" required />
             </div>
             <div class="form-group d-flex justify-content-between mb-3">
               <div class="form-check float-start">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  value=""
-                  id="flexCheckChecked"
-                />
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
                 <span class="form-check-label text-black" for="checkbox1">
                   Remember Me
                 </span>
               </div>
               <div class="float-end">
                 <span class="text-center mt-3">
-                  <a
-                    href="#"
-                    data-bs-toggle="modal"
-                    data-bs-target="#userForgotPasswordModal"
-                    >Forgot Password</a
-                  >
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#userForgotPasswordModal">Forgot Password</a>
                 </span>
               </div>
             </div>
@@ -64,12 +44,7 @@
             </button>
             <p class="text-center stowzy_sign_up_account mt-3">
               Don't have an account?
-              <a
-                href="#"
-                data-bs-toggle="modal"
-                data-bs-target="#userSignUpModal"
-                >Sign Up</a
-              >
+              <a href="#" data-bs-toggle="modal" data-bs-target="#userSignUpModal">Sign Up</a>
             </p>
 
             <div class="login_corporate text-left">
@@ -78,11 +53,7 @@
               <div class="login_corporate_right"></div>
             </div>
             <div class="login_externalLink mt-2">
-              <a
-                class="loginCard__extraUrl"
-                routerLink="/room-owner-login"
-                routerLinkActive="active"
-                >Corporate
+              <a class="loginCard__extraUrl" routerLink="/room-owner-login" routerLinkActive="active">Corporate
                 <i class="fa-solid fa-angle-right"></i>
               </a>
             </div>
@@ -94,26 +65,14 @@
 </div>
 
 <section class="user-forgot-password-model">
-  <div
-    class="modal fade"
-    id="userForgotPasswordModal"
-    tabindex="-1"
-    aria-labelledby="userForgotPasswordModalLabel"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="userForgotPasswordModal" tabindex="-1" aria-labelledby="userForgotPasswordModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header text-white">
           <h5 class="modal-title" id="userForgotPasswordModalLabel">
             Forgot Password
           </h5>
-          <button
-            type="button"
-            id="model-btn-close"
-            class="btn-close d-none d-md-block"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+          <button type="button" id="model-btn-close" class="btn-close d-none d-md-block" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <!-- Modal Body -->
         <div class="modal-body">
@@ -121,55 +80,26 @@
             <!-- Mobile Number Input -->
             <div class="form-group mt-3">
               <label for="mobileNumber" class="form-label">Mobile Number</label>
-              <input
-                type="text"
-                id="mobileNumber"
-                class="form-control"
-                placeholder="Enter your mobile number"
-                required
-              />
+              <input type="text" id="mobileNumber" class="form-control" placeholder="Enter your mobile number" required />
             </div>
             <!-- Mobile OTP Button and Input -->
             <div class="mt-2">
               <div class="d-flex">
-                <button
-                  type="button"
-                  class="btn btn-outline-primary w-50"
-                  id="mobileOtpBtn"
-                >
+                <button type="button" class="btn btn-outline-primary w-50" id="mobileOtpBtn">
                   Get mobile OTP
                 </button>
-                <input
-                  type="text"
-                  id="mobileOtp"
-                  class="form-control w-50 ms-1"
-                  placeholder="Enter mobile OTP"
-                />
+                <input type="text" id="mobileOtp" class="form-control w-50 ms-1" placeholder="Enter mobile OTP" />
               </div>
             </div>
             <!-- Password Input -->
             <div class="form-group mt-2">
               <label for="password" class="form-label">Password</label>
-              <input
-                type="password"
-                id="password"
-                class="form-control"
-                placeholder="Enter your password"
-                required
-              />
+              <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
             </div>
             <!-- Confirm Password Input -->
             <div class="form-group mt-2">
-              <label for="cnfmPassword" class="form-label"
-                >Confirm Password</label
-              >
-              <input
-                type="password"
-                id="cnfmPassword"
-                class="form-control"
-                placeholder="Confirm your password"
-                required
-              />
+              <label for="cnfmPassword" class="form-label">Confirm Password</label>
+              <input type="password" id="cnfmPassword" class="form-control" placeholder="Confirm your password" required />
             </div>
             <!-- Submit Button -->
             <button type="submit" class="btn btn-outline-primary w-100 mt-2">
@@ -179,12 +109,7 @@
         </div>
         <!-- Close Button for Small Screens -->
         <div class="text-center mb-3">
-          <button
-            type="button"
-            id="model-btn-close1"
-            class="btn btn-secondary d-md-none"
-            data-bs-dismiss="modal"
-          >
+          <button type="button" id="model-btn-close1" class="btn btn-secondary d-md-none" data-bs-dismiss="modal">
             Close
           </button>
         </div>
@@ -194,24 +119,12 @@
 </section>
 
 <section class="user-signUp-model">
-  <div
-    class="modal fade"
-    id="userSignUpModal"
-    tabindex="-1"
-    aria-labelledby="userSignUpModalLabel"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="userSignUpModal" tabindex="-1" aria-labelledby="userSignUpModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header text-white">
           <h5 class="modal-title" id="userSignUpModalLabel">Create Account</h5>
-          <button
-            type="button"
-            id="model-btn-close"
-            class="btn-close d-none d-md-block"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+          <button type="button" id="model-btn-close" class="btn-close d-none d-md-block" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <!-- Modal Body -->
         <div class="modal-body">
@@ -219,55 +132,26 @@
             <!-- Mobile Number Input -->
             <div class="form-group">
               <label for="mobileNumber" class="form-label">Mobile Number</label>
-              <input
-                type="text"
-                id="mobileNumber"
-                class="form-control"
-                placeholder="Enter your mobile number"
-                required
-              />
+              <input type="text" id="mobileNumber" class="form-control" placeholder="Enter your mobile number" required />
             </div>
             <!-- Mobile OTP Button and Input -->
             <div class="mt-2">
               <div class="d-flex">
-                <button
-                  type="button"
-                  class="btn btn-outline-primary w-50"
-                  id="mobileOtpBtn"
-                >
+                <button type="button" class="btn btn-outline-primary w-50" id="mobileOtpBtn">
                   Get mobile OTP
                 </button>
-                <input
-                  type="text"
-                  id="mobileOtp"
-                  class="form-control w-50 ms-1"
-                  placeholder="Enter mobile OTP"
-                />
+                <input type="text" id="mobileOtp" class="form-control w-50 ms-1" placeholder="Enter mobile OTP" />
               </div>
             </div>
             <!-- Password Input -->
             <div class="form-group mt-2">
               <label for="password" class="form-label">Password</label>
-              <input
-                type="password"
-                id="password"
-                class="form-control"
-                placeholder="Enter your password"
-                required
-              />
+              <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
             </div>
             <!-- Confirm Password Input -->
             <div class="form-group mt-2">
-              <label for="cnfmPassword" class="form-label"
-                >Confirm Password</label
-              >
-              <input
-                type="password"
-                id="cnfmPassword"
-                class="form-control"
-                placeholder="Confirm your password"
-                required
-              />
+              <label for="cnfmPassword" class="form-label">Confirm Password</label>
+              <input type="password" id="cnfmPassword" class="form-control" placeholder="Confirm your password" required />
             </div>
             <!-- Submit Button -->
             <button type="submit" class="btn btn-outline-primary w-100 mt-2">
@@ -277,12 +161,7 @@
         </div>
         <!-- Close Button for Small Screens -->
         <div class="text-center mb-3">
-          <button
-            type="button"
-            id="model-btn-close1"
-            class="btn btn-secondary d-md-none"
-            data-bs-dismiss="modal"
-          >
+          <button type="button" id="model-btn-close1" class="btn btn-secondary d-md-none" data-bs-dismiss="modal">
             Close
           </button>
         </div>
