commit for changes

--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/login/login.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/login/login.component.html
@@ -79,27 +79,27 @@
           <form>
             <!-- Mobile Number Input -->
             <div class="form-group mt-3">
-              <label for="mobileNumber" class="form-label">Mobile Number</label>
-              <input type="text" id="mobileNumber" class="form-control" placeholder="Enter your mobile number" required />
+              <label for="ufmobileNumber" class="form-label">Mobile Number</label>
+              <input type="text" id="ufMobileNumber" class="form-control" placeholder="Enter your mobile number" required />
             </div>
             <!-- Mobile OTP Button and Input -->
             <div class="mt-2">
               <div class="d-flex">
-                <button type="button" class="btn btn-outline-primary w-50" id="mobileOtpBtn">
+                <button type="button" class="btn btn-outline-primary w-50" id="ufMobileOtpBtn">
                   Get mobile OTP
                 </button>
-                <input type="text" id="mobileOtp" class="form-control w-50 ms-1" placeholder="Enter mobile OTP" />
+                <input type="text" id="ufMobileOtp" class="form-control w-50 ms-1" placeholder="Enter mobile OTP" />
               </div>
             </div>
             <!-- Password Input -->
             <div class="form-group mt-2">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" id="password" class="form-control" placeholder="Enter your password" required />
+              <label for="ufPassword" class="form-label">Password</label>
+              <input type="password" id="ufPassword" class="form-control" placeholder="Enter your password" required />
             </div>
             <!-- Confirm Password Input -->
             <div class="form-group mt-2">
-              <label for="cnfmPassword" class="form-label">Confirm Password</label>
-              <input type="password" id="cnfmPassword" class="form-control" placeholder="Confirm your password" required />
+              <label for="ufCnfmPassword" class="form-label">Confirm Password</label>
+              <input type="password" id="ufCnfmPassword" class="form-control" placeholder="Confirm your password" required />
             </div>
             <!-- Submit Button -->
             <button type="submit" class="btn btn-outline-primary w-100 mt-2">
